--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,14 +1,9 @@
 ---
 layout: archive
-title: "Portfolio"
+title: "Gallery"
 permalink: /portfolio/
 author_profile: true
 ---
-
-{% include base_path %}
-
-
-{% for post in site.portfolio %}
-  {% include archive-single.html %}
-{% endfor %}
+<iframe src="https://player.vimeo.com/video/329547943" width="640" height="640" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/329547943">Predator-prey dynamics with evolution</a> from <a href="https://vimeo.com/user9530500">ecolombo</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
