--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -4,6 +4,6 @@ title: "Gallery"
 permalink: /portfolio/
 author_profile: true
 ---
-<iframe src="https://player.vimeo.com/video/329547943" width="200" height="200" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/329547943" width="200" height="200" frameborder="0" allow="autoplay; fullscreen"></iframe>
 <p><a href="https://vimeo.com/329547943">Predator-prey dynamics with evolution</a> from <a href="https://vimeo.com/user9530500">ecolombo</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
