--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -4,6 +4,9 @@ title: "Gallery"
 permalink: /portfolio/
 author_profile: true
 ---
-<iframe src="https://player.vimeo.com/video/329547943" width="200" height="200" frameborder="0" allow="autoplay; fullscreen"></iframe>
+
+<iframe src="https://player.vimeo.com/video/329547943" width="200" height="200" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <p><a href="https://vimeo.com/329547943">Predator-prey dynamics with evolution</a> from <a href="https://vimeo.com/user9530500">ecolombo</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p>[https://arxiv.org/abs/1902.03016]<br />
+Eco-evolutionary frameworks can explain certain features of communities in which ecological and evolutionary processes occur over comparable timescales. In the particular case of prey-predator systems, a combination of empirical and theoretical studies have explored this possibility, showing that the evolution of prey traits, predator traits or the coevolution of both can contribute to the stability of the community, as well as to the emergence of various types of population cycles. However, these studies overlook that interactions are spatially constrained, a crucial ingredient known to foster species coexistence per se. Here, we investigate whether evolutionary dynamics interacts with the spatial structure of a prey-predator community in which both species show limited mobility and predators perceptual ranges are subject to natural selection. In these conditions, our results unveil an eco-evolutionary feedback between species spatial mixing and predators perceptual range: different levels of species mixing select for different perceptual ranges, which in turn reshape the spatial distribution of preys and their interaction with predators. This emergent pattern of interspecific interactions feeds back to the efficiency of the various perceptual ranges, thus selecting for new ones. Finally, since prey-predator mixing is the key factor that regulates the intensity of predation, we explore the community-level implications of such feedback and show that it controls both coexistence times and species extinction probabilities.</p>
 
