--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -4,6 +4,16 @@ title: "Gallery"
 permalink: /gallery/
 author_profile: true
 ---
+<div style="width: 100%; overflow: hidden;">
+    <div style="width: 50%; float: left;"> 
+    <iframe src="https://player.vimeo.com/video/329547943" width="200" height="200" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>  
+    </div>
+    <div style="margin-left: 50%;">
+    <iframe src="https://player.vimeo.com/video/329547943" width="200" height="200" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+</div>
+
+
 <div style="max-width: 200px;">
 <iframe src="https://player.vimeo.com/video/329547943" width="200" height="200" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <p><a href="https://vimeo.com/329547943">Predator-prey dynamics with evolution</a> from <a href="https://vimeo.com/user9530500">ecolombo</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
