--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -15,8 +15,9 @@ author_profile: true
     <div style="margin-left: 50%;">
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/induced.png">
-    Here you see spatial patterns are induced by landscape defects. Landscape hetereogenity play an important role revealing details about the individual-level interaction that, otherwise, would be hidden in a homogeneous landscape. <a href="https://arxiv.org/pdf/2003.00100.pdf">[more info]</a>
     </p>
+    Here you see spatial patterns are induced by landscape defects. Landscape hetereogenity play an important role revealing details about the individual-level interaction that, otherwise, would be hidden in a homogeneous landscape. <a href="https://arxiv.org/pdf/2003.00100.pdf">[more info]</a>
+    </div>
 </div>
 
 
