--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -18,6 +18,7 @@ author_profile: true
     </p>
     Here you see spatial patterns are induced by landscape defects. Landscape hetereogenity can be used as lens revealing details about the individual-level interaction that, otherwise, would be hidden in a homogeneous landscape. <a href="https://arxiv.org/pdf/2003.00100.pdf">[more info]</a>
     </div>
+    <div style="width: 50%; float: left;"> 
     <div style="width: 25%; float: left;"> 
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/spread.png">
@@ -25,8 +26,9 @@ author_profile: true
     </div>
     <div style="width: 25%; float: left;"> 
     <p align="center">
-    <img width="499" height="129" src="https://ehcolombo.github.io/images/spread.png">
+    <img width="499" height="129" src="https://ehcolombo.github.io/images/phase.png">
     </p>
+    </div>
     The population spatial dynamics couples the spatial and temporal aspects of the environemnt, making survival dependent on both features. <a href="https://arxiv.org/pdf/1610.05066.pdf">[more info]</a>
     </div>
 </div>
