--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -24,18 +24,18 @@ author_profile: true
     Population spatial dynamics couples environment spatial and temporal aspects making survival dependent on an interplay of both. <a href="https://arxiv.org/pdf/1610.05066.pdf">[more info]</a>
     </p>
     </div>
+</div>
+<div style="width: 100%; overflow: hidden;">
     <div style="margin-left: 50%;">
     <p align="center">
-    <img width="499" height="129" src="https://ehcolombo.github.io/images/habitat.png">
+    <img width="499" height="129" src="https://ehcolombo.github.io/images/induced.png">
     </p><p>
     Here you see spatial patterns induced by landscape defects. Landscape hetereogenity can be used as lens revealing details about the individual-level interaction that, otherwise, would be hidden in a homogeneous landscape. <a href="https://arxiv.org/pdf/2003.00100.pdf">[more info]</a>
     </p>
     <p align="center">
-    <img width="499" height="129" src="https://ehcolombo.github.io/images/network.png">
+    <img width="499" height="129" src="https://ehcolombo.github.io/images/survival.png">
     </p><p>
     Population spatial dynamics couples environment spatial and temporal aspects making survival dependent on an interplay of both. <a href="https://arxiv.org/pdf/1610.05066.pdf">[more info]</a>
     </p>
     </div>
 </div>
-
-
