--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -11,6 +11,7 @@ author_profile: true
     <p><a href="https://vimeo.com/329547943">Predator-prey dynamics with evolution</a> from <a href="https://vimeo.com/user9530500">ecolombo</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     The evolutionary path of traits that regulate individual spatial interaction depends on the species spatial distribution. But also, these traits reshape the spatial distribution. This estabilishes an eco-evolutionary feeback that controls important community outcomes, such as coexistence times and species extinction probabilities. <a href="https://www.nature.com/articles/s41598-019-54510-6.pdf">[more info]</a></p>
     </div>
+    </div>
     <div style="margin-left: 50%;">
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/induced.png">
