--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -28,7 +28,7 @@ author_profile: true
 <div style="width: 100%; overflow: hidden;">
     <div style="width: 50%; float: left;"> 
     <p align="center">
-    <img width="499" height="129" src="https://ehcolombo.github.io/images/induced.png">
+    <img width="499" height="129" src="https://ehcolombo.github.io/images/habitats.png">
     </p><p>
     Here you see spatial patterns induced by landscape defects. Landscape hetereogenity can be used as lens revealing details about the individual-level interaction that, otherwise, would be hidden in a homogeneous landscape. <a href="https://arxiv.org/pdf/2003.00100.pdf">[more info]</a>
     </p>
