--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -30,7 +30,7 @@ author_profile: true
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/habitats.png">
     </p><p>
-    Here you see spatial patterns induced by landscape defects. Landscape hetereogenity can be used as lens revealing details about the individual-level interaction that, otherwise, would be hidden in a homogeneous landscape. <a href="https://arxiv.org/pdf/2003.00100.pdf">[more info]</a>
+    Habitat commonly exibith variability in a wide range of scales. This challange species dispersal strategies to guide individuals to the good regions. 
     </p>
     </div>
 </div>
