--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -33,4 +33,11 @@ author_profile: true
     Habitat commonly exibith variability in a wide range of scales. This challange species dispersal strategies to guide individuals to the good regions. 
     </p>
     </div>
+    <div style="width: 50%; float: left;"> 
+    <p align="center">
+    <img width="499" height="129" src="https://ehcolombo.github.io/images/habitats.png">
+    </p><p>
+    Habitat commonly exibith variability in a wide range of scales. This challange species dispersal strategies to guide individuals to the good regions. 
+    </p>
+    </div>
 </div>
