--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -26,18 +26,34 @@ author_profile: true
     </div>
 </div>
 <div style="width: 100%; overflow: hidden;">
-    <div style="width: 50%; float: left;"> 
+    <div style="width: 49%; float: left;"> 
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/habitats.png">
     </p><p>
-    Habitat commonly exibith variability in a wide range of scales. This challange species dispersal strategies to guide individuals to the good regions. 
+    Habitat commonly exibith variability in a wide range of scales. This challange species dispersal strategies to guide individuals to the good regions. <a href="https://arxiv.org/pdf/1503.08168.pdf">[more info]</a>
     </p>
     </div>
     <div style="width: 50%; float: left;"> 
     <p align="center">
-    <img width="499" height="129" src="https://ehcolombo.github.io/images/habitats.png">
+    <img width="499" height="129" src="https://ehcolombo.github.io/images/selffrag.png">
     </p><p>
-    Habitat commonly exibith variability in a wide range of scales. This challange species dispersal strategies to guide individuals to the good regions. 
+    Density-depedent feedbacks can promote population self-fragmentation creating clusters separated by strickling zero population density regions. <a href="https://arxiv.org/pdf/1207.0524.pdf">[more info]</a>
     </p>
     </div>
+</div>
+<div style="width: 100%; overflow: hidden;">
+    <div style="width: 49%; float: left;"> 
+    <p align="center">
+    <img width="499" height="129" src="https://ehcolombo.github.io/images/lc.png">
+    </p><p>
+    Not always larger habitats are better for population survival.  <a href="https://www.researchgate.net/publication/323441635_Nonlinear_population_dynamics_in_a_bounded_habitat">[more info]</a>
+    </p>
+    </div>
+<!--     <div style="width: 50%; float: left;"> 
+    <p align="center">
+    <img width="499" height="129" src="https://ehcolombo.github.io/images/selffrag.png">
+    </p><p>
+    Density-depedent feedbacks can promote population self-fragmentation creating clusters separated by strickling zero population density regions.
+    </p>
+    </div> -->
 </div>
