--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -46,7 +46,7 @@ author_profile: true
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/lc.png">
     </p><p>
-    Not always larger habitats are better for population survival.  <a href="https://www.researchgate.net/publication/323441635_Nonlinear_population_dynamics_in_a_bounded_habitat">[more info]</a>
+    Larger habitats is not always better for population survival. <a href="https://www.researchgate.net/publication/323441635_Nonlinear_population_dynamics_in_a_bounded_habitat">[more info]</a>
     </p>
     </div>
 <!--     <div style="width: 50%; float: left;"> 
