--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -33,7 +33,7 @@ author_profile: true
     Habitat commonly exibith variability in a wide range of scales. This challange species dispersal strategies to guide individuals to the good regions. <a href="https://arxiv.org/pdf/1503.08168.pdf">[more info]</a>
     </p>
     </div>
-    <div style="width: 30%; float: left;"> 
+    <div style="width: 40%; float: center;"> 
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/lc.png">
     </p><p>
