--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -30,7 +30,7 @@ author_profile: true
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/habitats.png">
     </p><p>
-    Habitat commonly exibith variability in a wide range of scales. This challange species dispersal strategies to guide individuals to the good regions. <a href="https://arxiv.org/pdf/1503.08168.pdf">[more info]</a>
+    Habitats commonly exibith variability in a wide range of scales. Depeding on the level of information acessed by the individuals about the landscape, dispersal strategies might vary from random (uniformed) to selective (informated), what significantly changes the topology of the generated metapopulation network. <a href="https://arxiv.org/pdf/1503.08168.pdf">[more info]</a>
     </p>
     </div>
     <div style="width: 50%; float: left;"> 
