--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -49,11 +49,10 @@ author_profile: true
     Density-depedent feedbacks can promote population self-fragmentation creating clusters separated by strickling zero density regions. <a href="https://arxiv.org/pdf/1207.0524.pdf">[more info]</a>
     </p>
     </div>
-<!--     <div style="width: 50%; float: left;"> 
+    <div style="width: 50%; float: left;"> 
     <p align="center">
-    <img width="499" height="129" src="https://ehcolombo.github.io/images/selffrag.png">
+    <img width="499" height="129" src="https://ehcolombo.github.io/images/https://ehcolombo.github.io/images/survival.png">
     </p><p>
-    Density-depedent feedbacks can promote population self-fragmentation creating clusters separated by strickling zero population density regions.
-    </p>
-    </div> -->
+    Population spatial dynamics couples environment spatial and temporal aspects making survival dependent on an interplay of both. <a href="https://arxiv.org/pdf/1610.05066.pdf">[more info]</a>    </p>
+    </div>
 </div>
