--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -51,7 +51,7 @@ author_profile: true
     </div>
     <div style="width: 50%; float: left;"> 
     <p align="center">
-    <img width="499" height="129" src="https://ehcolombo.github.io/images/https://ehcolombo.github.io/images/survival.png">
+    <img width="499" height="129" src="https://ehcolombo.github.io/images/survival.png">
     </p><p>
     Population spatial dynamics couples environment spatial and temporal aspects making survival dependent on an interplay of both. <a href="https://arxiv.org/pdf/1610.05066.pdf">[more info]</a>    </p>
     </div>
