--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -21,7 +21,7 @@ author_profile: true
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/Screenshot from 2020-03-13 14-05-40.png">
     </p><p>
-    Criticality vs. Heterogeneity: for a weakly-coupled metapopulation, we obtain the class of heterogeneity that generates power-laws in the aggregated dataset. <a href="https://arxiv.org/abs/1907.07895">[more info]</a>
+    Criticality vs. Heterogeneity: for a weakly-coupled metapopulation model, we obtain the heterogeneity class that generates power-laws in the aggregated dataset. <a href="https://arxiv.org/abs/1907.07895">[more info]</a>
     </p>
     </div>
 </div>
