--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -37,7 +37,7 @@ author_profile: true
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/lc.png">
     </p><p>
-    Larger habitats is not always better for population survival. <a href="https://www.researchgate.net/publication/323441635_Nonlinear_population_dynamics_in_a_bounded_habitat">[more info]</a>
+    Larger habitat is not always better for population survival. <a href="https://www.researchgate.net/publication/323441635_Nonlinear_population_dynamics_in_a_bounded_habitat">[more info]</a>
     </p>
     </div>
 </div>
@@ -46,7 +46,7 @@ author_profile: true
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/selffrag.png">
     </p><p>
-    Density-depedent feedbacks can promote population self-fragmentation creating clusters separated by strickling zero density regions. <a href="https://arxiv.org/pdf/1207.0524.pdf">[more info]</a>
+    Density-depedent feedbacks can promote population self-fragmentation, creating isolated clusters - separated by strickling zero density regions. <a href="https://arxiv.org/pdf/1207.0524.pdf">[more info]</a>
     </p>
     </div>
     <div style="width: 50%; float: left;"> 
