--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -46,7 +46,7 @@ author_profile: true
     <p align="center">
     <img width="499" height="129" src="https://ehcolombo.github.io/images/selffrag.png">
     </p><p>
-    Density-depedent feedbacks can promote population self-fragmentation, creating isolated clusters - separated by strickling zero density regions. <a href="https://arxiv.org/pdf/1207.0524.pdf">[more info]</a>
+    Density-depedent feedbacks can promote population self-fragmentation, creating isolated clusters - separated by zero density regions. <a href="https://arxiv.org/pdf/1207.0524.pdf">[more info]</a>
     </p>
     </div>
     <div style="width: 50%; float: left;"> 
