--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -1,8 +1,12 @@
----
-layout: archive
-title: "Gallery"
-permalink: /gallery/
-author_profile: true
+
+---	
+permalink: /	
+title: " "  
+excerpt: "Gallery"	
+author_profile: true	
+redirect_from: 	
+  - /gallery/	
+  - /gallery.html	
 ---
 <div style="width: 100%; overflow: hidden;">
     <div style="width: 50%; float: left;"> 
