--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -1,12 +1,9 @@
 
 ---	
-permalink: /gallery/	
-title: " "  
-excerpt: "Gallery"	
-author_profile: true	
-redirect_from: 	
-  - /gallery/	
-  - /gallery.html	
+layout: archive
+title: "Gallery"
+permalink: /gallery/
+author_profile: true
 ---
 <div style="width: 100%; overflow: hidden;">
     <div style="width: 50%; float: left;"> 
